Bug 471857 - "Do not change color from original HTML mail" also makes plain text mail not adhere to color scheme
Summary: "Do not change color from original HTML mail" also makes plain text mail not ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.23.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-02 00:07 UTC by Quinten Kock
Modified: 2023-08-03 06:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quinten Kock 2023-07-02 00:07:48 UTC
SUMMARY
The "Do not change color from original HTML mail" option in Settings -> Appearance -> Colors, will make plain-text emails appear in white. This is undesirable e.g. when using a dark theme.


STEPS TO REPRODUCE
1. Set the color scheme to e.g. Breeze Dark
2. Enable the option described in the summary
3. Open a plain-text email

OBSERVED RESULT
The background is white

EXPECTED RESULT
The viewer adheres to the system color theme because it is displaying plain text without any colors that could act up

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
I guess this may actually be a kdepim/messageviewer issue?
Comment 1 Laurent Montel 2023-07-02 05:34:14 UTC
It's the idea of this option :)
=> don't activate it.
It's not a bug :)
Comment 2 Quinten Kock 2023-07-02 11:00:58 UTC
In that case, at least the wording is highly misleading. Because the wording says "HTML mail", it implies that plain-text mail is not affected by the option.

Also, I would like the option to have only HTML emails keep their original colors while plaintext email keeps its original color, because HTML email can look very odd with a custom color scheme and bad CSS, while plaintext email has no such issue.
Comment 3 Laurent Montel 2023-07-02 12:38:46 UTC
Ah ok I see your problem.
I reopen it and I will look at what I can do.
Comment 4 Laurent Montel 2023-08-03 06:07:25 UTC
Git commit cc3cc95dfa11763104ed8a202d075bfa0d8792bc by Laurent Montel.
Committed on 03/08/2023 at 08:06.
Pushed by mlaurent into branch 'release/23.08'.

Fix Do not change color from original HTML mail" also makes plain text mail not adhere to color scheme
FIXED-IN: 5.24.0

M  +7    -0    messageviewer/src/viewer/viewer_p.cpp
M  +1    -0    messageviewer/src/viewer/viewer_p.h

https://invent.kde.org/pim/messagelib/-/commit/cc3cc95dfa11763104ed8a202d075bfa0d8792bc