Fix Do not change color from original HTML mail" also makes plain text mail not adhere to color scheme

BUG: 471857
FIXED-IN: 5.24.0